--- a/maps/map.yaml
+++ b/maps/map.yaml
@@ -1,6 +1,6 @@
-image: map_demo.png
+image: route1_resolution1_rtk.png
 resolution: 1
-origin: [0.0, 0.0, 0.0]
+origin: [94260, 209038, 0] #[position_x, position_y, yaw(rads)]
 occupied_thresh: 0.1
 free_thresh: 0.05
 negate: 0
